# randomly-change-self

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint_test.yml  pypi_release.yml
randomly_change_self/: change_self.py
